--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <label for="mensaje">Mensaje:</label><br>
             <textarea id="mensaje" name="mensaje" rows="4" required></textarea><br><br>
 
-            <button type="submit">Enviar</button>
+            <button type="button">Enviar</button>
         </form>
         <p>Encuéntrame en:</p>
         <a href="https://www.facebook.com/share/8Kg8NrgKZFqUVAh6/" target="_blank">Facebook</a> 
